Fixed overflow in tootip box?

--- a/styles/tooltips.css
+++ b/styles/tooltips.css
@@ -1,6 +1,7 @@
 div#station-tooltip{
     max-width:100%;
     width:auto;
+    height:35em;
 }
 div#station-tooltip p,div#station-tooltip h3{
     color:black;
@@ -77,7 +78,7 @@ div#station-tooltip div#secondRow img.img-to-load {
     background-color: lightgreen;
 }
 .chargePointColor {
-    height:3em;
+    height:3.5em;
     width: 1em;
     float:right;
     background-color: lightgreen;
@@ -107,7 +108,7 @@ div#station-tooltip div#secondRow img.img-to-load {
 
 .cpelements {
     width:100%;
-    height:3em;
+    height:3.5em;
     border-bottom:1px solid gray;
     float:left;
 
